kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gw
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: api-gw
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9797"
      labels:
        app: api-gw
    spec:
      containers:
      - name: otto-api-gw
        image: ghcr.io/danielmunro/otto-api-gw:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
            targetPort: 3000
            name: api-gw
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
      imagePullSecrets:
      - name: dockerconfigjson-github-com
