kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gw
spec:
  type: ClusterIP
  selector:
    app: api-gw
  ports:
    - name: http
      port: 8000
      targetPort: 8000
