kustomize/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: api-gw
      port:
        number: 8000
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-gw
                port:
                  number: 8000
