kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gw-ingress
  annotations:
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: thirdplaceapp.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /*
            backend:
              service:
                name: api-gw
                port:
                  number: 8000
